# scrap-e

./: .dockerignore  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  404.html  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  example_output.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  renovate.json  sitemap.xml  verify_env.py
.claude/: settings.local.json
.claude/agents/: anti-detection-engineer.md  extraction-rule-generator.md  github-automation-expert.md  mkdocs-documentation-architect.md  scraper-implementation-builder.md
.github/: .gitmessage  CODEOWNERS  COMMIT_CONVENTION.md  COMMIT_TEMPLATE.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  actionlint-matcher.json  actionlint.yml  pull_request_template.md  release.yml  renovate-config.js
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/actions/build-package/: action.yml
.github/actions/install-deps/: action.yml
.github/actions/lint/: action.yml
.github/actions/run-benchmarks/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/security-scan/: action.yml
.github/actions/setup-python/: action.yml
.github/scripts/: setup-branch-protection.sh
.github/workflows/: ci.yml  cleanup-deployments.yml  codeql.yml  dependency-update.yml  docs.yml  release.yml  renovate-auto-merge.yml  renovate-rebase.yml  renovate.yml  stale.yml  test-matrix.yml
api/core/base-scraper/: index.html
api/core/configuration/: index.html
api/core/models/: index.html
api/scrapers/browser-scraper/: index.html
api/scrapers/http-scraper/: index.html
contributing/: index.html
docs/: contributing.md  index.md  pre-commit.md
docs/api/cli/: commands.md
docs/api/core/: base-scraper.md  configuration.md  exceptions.md  models.md
docs/api/parsers/: html-parser.md
docs/api/scrapers/: api-scrapers.md  browser-scraper.md  http-scraper.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: api-scraping.md  cli-usage.md  database-scraping.md  error-handling.md  file-processing.md  web-scraping.md
examples/: basic_usage.py  comprehensive_test.py  manual_test.py
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
pre-commit/: index.html
scripts/: optimize_test_workers.py
search/: search_index.json
src/scrap_e/: __init__.py  cli.py
src/scrap_e/core/: __init__.py  base_scraper.py  config.py  exceptions.py  models.py
src/scrap_e/scrapers/: __init__.py
src/scrap_e/scrapers/web/: __init__.py  browser_scraper.py  http_scraper.py  parser.py  selectolax_stub.pyi
tests/: REFACTORING_SUMMARY.md  __init__.py  conftest.py  test_browser_scraper.py  test_extended_coverage.py  test_http_scraper.py  test_http_scraper_advanced.py  test_parser_advanced.py  test_performance.py
tests/cli/: __init__.py  fixtures.py  test_cli_base.py  test_cli_batch.py  test_cli_doctor.py  test_cli_scrape.py  test_cli_sitemap.py
tests/fixtures/: __init__.py  html_samples.py  mock_responses.py  test_data.py
tests/integration/: test_http_scraper_integration.py  test_scraper_parser.py
tests/performance/: test_performance.py  test_performance_extraction.py  test_performance_parser.py  test_performance_scraper.py
tests/scrapers/: test_browser_scraper_advanced.py  test_browser_scraper_core.py  test_browser_scraper_interactions.py  test_http_scraper.py  test_http_scraper_extraction.py  test_http_scraper_pagination.py  test_http_scraper_session.py  test_parser_advanced.py
tests/unit/: test_base_scraper.py  test_parser.py
tests/unit/core/: __init__.py  test_config.py  test_models.py  test_stats.py
tests/unit/parsers/: test_core.py  test_extraction.py  test_selectors.py  test_transforms.py
tests/unit/scrapers/http_scraper/: __init__.py  test_core.py
user-guide/api-scraping/: index.html
user-guide/database-scraping/: index.html
user-guide/file-processing/: index.html
user-guide/web-scraping/: index.html
